# ifes-arabot-airsim

./: .gitignore  README.md  Trajetoria1.txt  Trajetoria2.txt  Trajetoria3.txt  auto.csv  build.sh  grade.py  grade.sh  lap1.txt  lap2.txt  lap3.txt  run.sh
AirSim/: AirSim.sln
AirSim/AirLib/: .gitignore  AirLib.vcxproj
AirSim/AirLib/include/common/: PidController.hpp
AirSim/Examples/: Examples.vcxproj
AirSim/HelloCar/: ComparaWaypoints.h  HelloCar.vcxproj  Interp.h  LateralControl.h  LongitudinalControl.h  Waypoints.h  image.h  main.cpp  mapa1.pbm  misc.h  pnmfile.h
AirSim/cmake/: CMakeLists.txt
AirSim/cmake/AirLib/: CMakeLists.txt
AirSim/cmake/HelloCar/: CMakeLists.txt
